--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -2,27 +2,31 @@ name: SonarQube Analysis
 
 on:
   push:
-    branches:
-      - taller
+    branches: ["taller"]
   pull_request:
-    branches:
-      - taller
+    branches: ["taller"]
 
 jobs:
   sonarQube:
     name: SonarQube Analysis
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+
+    environment: sonarqube
+    
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
+          distribution: temurin
           java-version: '11'
 
       - name: Cache SonarScanner packages
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
@@ -32,3 +36,17 @@ jobs:
           wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
           unzip sonar-scanner-cli-4.8.0.2856-linux.zip -d $HOME
           echo "$HOME/sonar-scanner-4.8.0.2856-linux/bin" >> $GITHUB_PATH
+
+      - name: Run SonarScanner
+        env:
+      # ✅ Recomendado: muévelo a Environment Secret o Variable
+      # Si lo pones como secret de environment: SONAR_HOST_URL
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          sonar-scanner \
+          -Dsonar.projectKey=proyecto3 \
+          -Dsonar.sources=. \
+          -Dsonar.host.url="$SONAR_HOST_URL" \
+          -Dsonar.token="$SONAR_TOKEN" \
+          -Dsonar.python.version=3.12.7
